--- a/index.html
+++ b/index.html
@@ -13,6 +13,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Alice&family=Archivo:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur sequi doloribus corporis excepturi obcaecati repellendus commodi nisi necessitatibus eligendi, ab non quam nobis illum eius id voluptatibus provident numquam vitae?
+    <header class="container">
+        <nav id="primary" class="grid grid-flow-col">
+            <div>
+                <img src="assets/icons/List.svg" alt="ícone menu">
+                <strong>Menu</strong>
+            </div>
+            <div>
+                <img src="assets/icons/Logo.svg" alt="Logo">
+            </div>
+            <div>
+                <strong>Buscar</strong>
+                <img src="assets/icons/MagnifyingGlass.svg" alt="Lupa">
+            </div>
+        </nav>
+        <nav id="secundary" class="grid grid-flow-col">
+            <a href="#">Inteligência Artificial</a>
+            <a href="#">Blockchain</a>
+            <a href="#">Hologramas</a>
+            <a href="#">Internet</a>
+            <a href="#">Vestíveis</a>
+            <a href="#">Realidade Aumentada</a>
+            <a href="#">Realidade Virtual</a>
+        </nav>
+    </header>
 </body>
 </html>
